# agentworld

./: .gitignore  README.md  pyproject.toml
brief/: dynamic_mechanisms.md
dashboard/: README.md  _tokens.css  copy.md  foldtree.js  index.html  live.html  live_cast.js  live_flow.js  live_graph.js  live_orbit.js  live_pairs.js  live_parameters.js  live_sector_chord.js  sandbox.html
dashboard/sandbox/: agents.js  alpha_ebi_curve.js  alpha_map.js  alpha_weights.json  bonds.js  cabals.js  cluster_labels.js  cluster_overlay.js  clusters.js  clusters_sbm.js  dust.js  edges.js  firms.js  folds.js  inspector_agent.js  palette.js  scene.js  stream-worker.js  stream.js  surface.js  themes.js  trails.js
docs/: bibliography.md
docs/concepts/: adaptive_dampener.md  coasean_bargaining.md  convergence.md  demand_and_intermediation.md  empire.md  epistemic_status.md  exocapitalism.md  fractal_folding.md  historical_anchor.md  live_parameters.md  matryoshkan_alignment.md  parasociety.md  phase_space.md  pigouvian_automation.md  priors.md  registration.md  smooth_striated.md  time_discretization.md
docs/plans/: _handoff_pass15.md  _handoff_pass25.md  _robustness_round_index.md  (+15 more)
engine/: README.md  __init__.py  absorption_sweep.py  build_dashboard.py  cli.py  convergence.py  ensemble.py  perf.py  plotting.py  refresh_diagnostics.py  runner.py  scale.py  sensitivity.py  sensitivity_compare.py  serve.py  stability.py  substrate_sweep.py
notebooks/: 00_agentworld.ipynb
outputs/: scale_up_report.json
scripts/: calibrate_transaction_cap.py  regenerate_baselines.py  scale_up.py
(+390 files in other folders)
